--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 IJKMediaFramework.framework filter=lfs diff=lfs merge=lfs -text
+IJKMediaFramework filter=lfs diff=lfs merge=lfs -text
+*.framework filter=lfs diff=lfs merge=lfs -text
